# CelestialChain

./: .gitignore  .qmake.stash  App.qml  Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  BlockchainDB.cpp  BlockchainDB.h  BlockchainGUI.cpp  BlockchainGUI.h  BlockchainScreen.qml  CMakeLists.txt  CelestialChain-GUI.pro  ConsoleScreen.qml  Dashboard.qml  ExplorerScreen.qml  LogsScreen.qml  Makefile  Makefile.Debug  Makefile.Release  MempoolScreen.qml  NetworkNode.cpp  NetworkNode.h  NodeApp.cpp  PeersScreen.qml  README.md  Screen01.ui.qml  Transaction.cpp  Transaction.h  Types.h  WalletScreen.qml  balanceMapping.cpp  balanceMapping.h  build_all.bat  check-system.bat  compile.bat  crypto_utils.cpp  crypto_utils.h  debug.html  (+26 more)
Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
Storage_127_0_0_1_8000/: LOG  LOG.old
Storage_127_0_0_1_8001/: LOG  LOG.old
Storage_127_0_0_1_8004/: LOG  LOG.old
Storage_127_0_0_1_8005/: LOG  LOG.old
Storage_127_0_0_1_8010/: LOG  LOG.old
api/: CMakeLists.txt  CelestialChainAPI.cpp  CelestialChainAPI.h  README.md  build_api.bat
blockchain/: blockchain.sln  blockchain.vcxproj  blockchain.vcxproj.filters
blockchain/x64/Debug/: blockchain.exe.recipe  blockchain.ilk  blockchain.vcxproj.FileListAbsolute.txt  vc143.idb
blockchain/x64/Debug/blockchain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  blockchain.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
blockchain_db_8000/: LOG  LOG.old
blockchain_db_8001/: 000005.ldb  LOG  LOG.old  MANIFEST-000007
blockchain_db_8005/: 000005.ldb  LOG  LOG.old
blockchain_db_8010/: LOG  LOG.old  MANIFEST-000007
release/: qrc_qml.cpp
test_db_8005/: LOG
web/blockchain-ui/: .env.3000  .env.3001  .env.3002  README.md  check-all-apis.ps1  check-all-endpoints.ps1  check-api.ps1  check-cors.ps1  cors-proxy.js  diagnose.ps1  direct-api-test.js  fix-single-ui.bat  kill-ui-servers.bat  package-lock.json  package.json  restart-dev.bat  restart-dev.ps1  restart-direct.bat  restart-multi-ui.bat  run-instances.js  setup.ps1  start-dev.bat  start-dev.ps1  start-multi-ui.bat  start-multi-ui.ps1  start-proxy.bat  start-ui-with-cors.bat  test-api-connection.js  verify-cors.ps1
web/blockchain-ui/src/: App.js  setupProxy.js
web/blockchain-ui/src/api/: blockchainService.js  nodeConnectionManager.js
web/blockchain-ui/src/components/: NodeSelector.js  NodeStatus.js
web/blockchain-ui/src/components/Explorer/: AddressDetail.js  BlockDetail.js  TransactionDetail.js
web/blockchain-ui/src/components/Layout/: MainLayout.js
web/blockchain-ui/src/components/UI/: BlockCard.js  StatCard.js  TransactionCard.js  WalletTransactionItem.js
web/blockchain-ui/src/pages/: Blockchain.js  Dashboard.js  Explorer.js  Explorer.js.bak  ExplorerAddressView.js  ExplorerBlockView.js  ExplorerTransactionView.js  Mempool.js  Mining.js  NotFound.js  Peers.js  Settings.js  SyncNetwork.js  Transactions.js  Wallet.js
web/blockchain-ui/src/theme/: index.js
